feature: Added comments

--- a/eda/first_eda.ipynb
+++ b/eda/first_eda.ipynb
@@ -1038,8 +1038,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
-    "\n",
-    "# Load the titles into a dataframe\n",
+    "# Copy to not lose any movie titles for later\n",
     "selected_similarity = movie_titles_df.copy()\n",
     "\n",
     "selected_similarity['processed_overview'] = selected_similarity['title'].str.lower()\n",
@@ -1051,8 +1050,7 @@
     "cosine_sim = cosine_similarity(tfidf_matrix, tfidf_matrix)\n",
     "cosine_sim_df = pd.DataFrame(cosine_sim, index=selected_similarity['title'], columns=selected_similarity['title'])\n",
     "\n",
-    "\n",
-    "# Create the heatmap\n",
+    "# heatmap\n",
     "plt.figure(figsize=(100, 100))\n",
     "sns.heatmap(cosine_sim_df, cmap='coolwarm')\n",
     "plt.title('Movie Similarity Heatmap')\n",
