feature: Added data description

--- a/eda/first_eda.ipynb
+++ b/eda/first_eda.ipynb
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 76,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\phili\\AppData\\Local\\Temp\\ipykernel_21880\\2758919096.py:15: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\phili\\AppData\\Local\\Temp\\ipykernel_21880\\2795991324.py:15: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  return pd.read_sql_query(sql_query, conn)\n"
      ]
     },
@@ -41,104 +41,80 @@
      "output_type": "stream",
      "text": [
       "General Movie Statistics:\n",
-      "    avg_runtime    avg_budget   avg_revenue earliest_release latest_release\n",
-      "0    82.684252  1.067741e+07  3.226049e+07       1896-01-01     2027-05-06\n",
+      "        avg_runtime    avg_budget   avg_revenue\n",
+      "count     1.000000  1.000000e+00  1.000000e+00\n",
+      "mean     80.059103  9.271218e+06  2.781976e+07\n",
+      "std            NaN           NaN           NaN\n",
+      "min      80.059103  9.271218e+06  2.781976e+07\n",
+      "25%      80.059103  9.271218e+06  2.781976e+07\n",
+      "50%      80.059103  9.271218e+06  2.781976e+07\n",
+      "75%      80.059103  9.271218e+06  2.781976e+07\n",
+      "max      80.059103  9.271218e+06  2.781976e+07\n",
       "\n",
       "Genre Analysis:\n",
-      "                name  num_movies  avg_runtime\n",
-      "0          Thriller        3278    99.816046\n",
-      "1           Romance        2346    98.409207\n",
-      "2         Adventure        2028   100.656805\n",
-      "3            Family        1520    81.748684\n",
-      "4           History         671   112.645306\n",
-      "5            Comedy        5030    88.181312\n",
-      "6         Animation        1608    64.403607\n",
-      "7           Western         233   105.480687\n",
-      "8             Crime        1876   101.719616\n",
-      "9             Music         681    82.593245\n",
-      "10          Fantasy        1499    92.646431\n",
-      "11           Horror        2068    83.213733\n",
-      "12            Drama        6807    97.388571\n",
-      "13              War         496   106.614919\n",
-      "14      Documentary        1770    54.628814\n",
-      "15          Mystery        1177    96.830926\n",
-      "16         TV Movie         575    79.360000\n",
-      "17           Action        3083   101.123905\n",
-      "18  Science Fiction        1449    93.756384\n",
+      "         num_movies  avg_runtime\n",
+      "count    19.000000    19.000000\n",
+      "mean   2277.105263    89.945153\n",
+      "std    1874.674280    14.448662\n",
+      "min     267.000000    54.490296\n",
+      "25%    1068.000000    81.518175\n",
+      "50%    1813.000000    95.172827\n",
+      "75%    2499.000000    99.456665\n",
+      "max    7927.000000   110.552318\n",
       "\n",
       "Production Analysis:\n",
-      "                                           name  num_movies    avg_budget  \\\n",
-      "0                                      Hachiko           1  1.600000e+07   \n",
-      "1                             After Dark Films           7  1.285714e+07   \n",
-      "2                                    HBO Films          20  3.300000e+06   \n",
-      "3             Scanbox Entertainment Production           1  0.000000e+00   \n",
-      "4                 59th & Prairie Entertainment           1  0.000000e+00   \n",
-      "...                                        ...         ...           ...   \n",
-      "15146                                   Gatlin           1  8.000000e+05   \n",
-      "15147                   Zapruder's Other Films           1  1.350000e+05   \n",
-      "15148        Compañía Cinematográfica de Chile           1  0.000000e+00   \n",
-      "15149  Studio Filmowe im. Karola Irzykowskiego           1  0.000000e+00   \n",
-      "15150                   La Corriente del Golfo           1  0.000000e+00   \n",
-      "\n",
-      "       avg_revenue  \n",
-      "0       46749646.0  \n",
-      "1        7086272.0  \n",
-      "2        7962094.4  \n",
-      "3              0.0  \n",
-      "4              0.0  \n",
-      "...            ...  \n",
-      "15146   14568989.0  \n",
-      "15147          0.0  \n",
-      "15148          0.0  \n",
-      "15149          0.0  \n",
-      "15150          0.0  \n",
-      "\n",
-      "[15151 rows x 4 columns]\n",
+      "          num_movies    avg_budget   avg_revenue\n",
+      "count  16900.000000  1.690000e+04  1.690000e+04\n",
+      "mean       2.709704  8.861444e+06  2.116978e+07\n",
+      "std       11.134327  2.146124e+07  6.472367e+07\n",
+      "min        1.000000  0.000000e+00  0.000000e+00\n",
+      "25%        1.000000  0.000000e+00  0.000000e+00\n",
+      "50%        1.000000  0.000000e+00  0.000000e+00\n",
+      "75%        2.000000  7.000000e+06  1.000000e+07\n",
+      "max      583.000000  3.000000e+08  1.143504e+09\n",
       "\n",
       "Language Analysis:\n",
-      "    original_language  num_movies\n",
-      "0                 as           1\n",
-      "1                 sh          11\n",
-      "2                 kk           2\n",
-      "3                 gl           2\n",
-      "4                 bs           6\n",
-      "..               ...         ...\n",
-      "82                bm           1\n",
-      "83                it         509\n",
-      "84                ps           1\n",
-      "85                da          84\n",
-      "86                ku           4\n",
-      "\n",
-      "[87 rows x 2 columns]\n",
+      "          num_movies\n",
+      "count     97.000000\n",
+      "mean     228.154639\n",
+      "std     1379.391271\n",
+      "min        1.000000\n",
+      "25%        2.000000\n",
+      "50%        8.000000\n",
+      "75%       52.000000\n",
+      "max    13485.000000\n",
       "\n",
       "Popularity and Ratings Analysis:\n",
-      "    avg_popularity  avg_vote  num_movies\n",
-      "0       29.304734  5.028213       27937\n",
+      "        avg_popularity  avg_vote  num_movies\n",
+      "count        1.000000  1.000000         1.0\n",
+      "mean        29.662887  4.943701     34544.0\n",
+      "std               NaN       NaN         NaN\n",
+      "min         29.662887  4.943701     34544.0\n",
+      "25%         29.662887  4.943701     34544.0\n",
+      "50%         29.662887  4.943701     34544.0\n",
+      "75%         29.662887  4.943701     34544.0\n",
+      "max         29.662887  4.943701     34544.0\n",
       "Movie Lengths Statistics:\n",
-      "    min_runtime  max_runtime  avg_runtime\n",
-      "0            0          800    82.684252\n",
+      "        min_runtime  max_runtime  avg_runtime\n",
+      "count          1.0          1.0     1.000000\n",
+      "mean           0.0        800.0    80.059103\n",
+      "std            NaN          NaN          NaN\n",
+      "min            0.0        800.0    80.059103\n",
+      "25%            0.0        800.0    80.059103\n",
+      "50%            0.0        800.0    80.059103\n",
+      "75%            0.0        800.0    80.059103\n",
+      "max            0.0        800.0    80.059103\n",
       "\n",
       "Movies per Genre:\n",
-      "                name  num_movies\n",
-      "0          Thriller        3278\n",
-      "1           Romance        2346\n",
-      "2         Adventure        2028\n",
-      "3            Family        1520\n",
-      "4           History         671\n",
-      "5            Comedy        5030\n",
-      "6         Animation        1608\n",
-      "7           Western         233\n",
-      "8             Crime        1876\n",
-      "9             Music         681\n",
-      "10          Fantasy        1499\n",
-      "11           Horror        2068\n",
-      "12            Drama        6807\n",
-      "13              War         496\n",
-      "14      Documentary        1770\n",
-      "15          Mystery        1177\n",
-      "16         TV Movie         575\n",
-      "17           Action        3083\n",
-      "18  Science Fiction        1449\n"
+      "         num_movies\n",
+      "count    19.000000\n",
+      "mean   2277.105263\n",
+      "std    1874.674280\n",
+      "min     267.000000\n",
+      "25%    1068.000000\n",
+      "50%    1813.000000\n",
+      "75%    2499.000000\n",
+      "max    7927.000000\n"
      ]
     }
    ],
@@ -220,19 +196,19 @@
     "\"\"\", conn)\n",
     "\n",
     "\n",
-    "print(\"General Movie Statistics:\\n\", movie_stats)\n",
-    "print(\"\\nGenre Analysis:\\n\", genre_stats)\n",
-    "print(\"\\nProduction Analysis:\\n\", production_stats)\n",
-    "print(\"\\nLanguage Analysis:\\n\", language_stats)\n",
-    "print(\"\\nPopularity and Ratings Analysis:\\n\", popularity_stats)\n",
-    "print(\"Movie Lengths Statistics:\\n\", movie_lengths_stats)\n",
-    "print(\"\\nMovies per Genre:\\n\", movies_per_genre)"
+    "print(\"General Movie Statistics:\\n\", movie_stats, movie_stats.describe())\n",
+    "print(\"\\nGenre Analysis:\\n\", genre_stats, genre_stats.describe())\n",
+    "print(\"\\nProduction Analysis:\\n\", production_stats, production_stats.describe())\n",
+    "print(\"\\nLanguage Analysis:\\n\", language_stats, language_stats.describe())\n",
+    "print(\"\\nPopularity and Ratings Analysis:\\n\", popularity_stats, popularity_stats.describe())\n",
+    "print(\"Movie Lengths Statistics:\\n\", movie_lengths_stats, movie_lengths_stats.describe())\n",
+    "print(\"\\nMovies per Genre:\\n\",movies_per_genre, movies_per_genre.describe())"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-03T17:39:17.909137800Z",
-     "start_time": "2023-12-03T17:39:17.098568500Z"
+     "end_time": "2023-12-04T17:49:39.212627200Z",
+     "start_time": "2023-12-04T17:49:38.161239300Z"
     }
    },
    "id": "initial_id"
@@ -1111,32 +1087,6 @@
     }
    },
    "id": "cac5dd1bb7e2b07f"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                                        title\n0                                      Suzume\n1                               Spirited Away\n2                                  GoodFellas\n3                                12 Angry Men\n4                                     Radical\n...                                       ...\n18493                    Riverdance: The Show\n18494                              Jackass 3D\n18495                        April Fools' Day\n18496             The Wreck of the Mary Deare\n18497  opium_latte raw studio sessions vol. 8\n\n[18498 rows x 1 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Suzume</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Spirited Away</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>GoodFellas</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>12 Angry Men</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Radical</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>18493</th>\n      <td>Riverdance: The Show</td>\n    </tr>\n    <tr>\n      <th>18494</th>\n      <td>Jackass 3D</td>\n    </tr>\n    <tr>\n      <th>18495</th>\n      <td>April Fools' Day</td>\n    </tr>\n    <tr>\n      <th>18496</th>\n      <td>The Wreck of the Mary Deare</td>\n    </tr>\n    <tr>\n      <th>18497</th>\n      <td>opium_latte raw studio sessions vol. 8</td>\n    </tr>\n  </tbody>\n</table>\n<p>18498 rows × 1 columns</p>\n</div>"
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "movie_titles_df"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-03T14:31:26.782274600Z",
-     "start_time": "2023-12-03T14:31:26.546295100Z"
-    }
-   },
-   "id": "36696ed00173eb65"
   },
   {
    "cell_type": "code",
