--- a/eda/third_eda.ipynb
+++ b/eda/third_eda.ipynb
@@ -15,7 +15,7 @@
     "db_params = {\n",
     "    'dbname': 'movie_db', \n",
     "    'user': 'postgres', \n",
-    "    'password': '9YBhSoDiMhwFjhC892BcaVkFv5mdP8qFwM5Lv9jPwqekRWKLXEKF5Fjr9zCyKsMgVeXpUxbobMZJRth3GeUuPdbD2XiicCnTcNeFscJchuaEVaMDXMxZ8zJkoG9QMQjy', \n",
+    "    'password':  os.environ['POSTGRES_PASSWORD'], \n",
     "    'host': '49.13.1.33',\n",
     "    'port': '5333'\n",
     "}\n",
